--- a/Maintenance/src/MaintenanceGui.ui
+++ b/Maintenance/src/MaintenanceGui.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>630</width>
-    <height>518</height>
+    <height>539</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -186,7 +186,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>460</y>
+      <y>490</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -199,7 +199,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>460</y>
+      <y>490</y>
       <width>75</width>
       <height>21</height>
      </rect>
@@ -212,7 +212,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>460</y>
+      <y>490</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -389,6 +389,7 @@
     </property>
     <property name="font">
      <font>
+      <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
@@ -410,6 +411,7 @@
     </property>
     <property name="font">
      <font>
+      <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
@@ -431,6 +433,7 @@
     </property>
     <property name="font">
      <font>
+      <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
@@ -452,6 +455,7 @@
     </property>
     <property name="font">
      <font>
+      <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
@@ -482,10 +486,10 @@
      </rect>
     </property>
     <property name="text">
-     <string>Analog In</string>
+     <string>Button Analog In</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinAnalogIn">
+   <widget class="QSpinBox" name="spinAnalogIn2">
     <property name="enabled">
      <bool>false</bool>
     </property>
@@ -499,6 +503,7 @@
     </property>
     <property name="font">
      <font>
+      <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
@@ -571,6 +576,7 @@
     </property>
     <property name="font">
      <font>
+      <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
@@ -591,7 +597,7 @@
      <string>Poll</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkPollAnalog">
+   <widget class="QCheckBox" name="checkPollAnalog2">
     <property name="geometry">
      <rect>
       <x>340</x>
@@ -602,6 +608,60 @@
     </property>
     <property name="text">
      <string>Poll</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>450</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Potentiometer Analog In</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkPollAnalog4">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>450</y>
+      <width>92</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Poll</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinAnalogIn4">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>450</y>
+      <width>101</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="minimum">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <number>1023</number>
+    </property>
+    <property name="value">
+     <number>500</number>
     </property>
    </widget>
   </widget>
