--- a/Maintenance/src/MaintenanceGui.ui
+++ b/Maintenance/src/MaintenanceGui.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>630</width>
-    <height>539</height>
+    <height>546</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>70</y>
+      <y>80</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -89,7 +89,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>70</y>
+      <y>90</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -102,7 +102,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>110</y>
+      <y>130</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -121,7 +121,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>110</y>
+      <y>130</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -134,7 +134,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>70</y>
+      <y>80</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -147,7 +147,7 @@
     <property name="geometry">
      <rect>
       <x>440</x>
-      <y>70</y>
+      <y>80</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -160,7 +160,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>110</y>
+      <y>130</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -173,7 +173,7 @@
     <property name="geometry">
      <rect>
       <x>440</x>
-      <y>110</y>
+      <y>130</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -186,7 +186,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>490</y>
+      <y>500</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -199,7 +199,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>490</y>
+      <y>500</y>
       <width>75</width>
       <height>21</height>
      </rect>
@@ -212,7 +212,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>490</y>
+      <y>500</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -225,7 +225,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>160</y>
+      <y>170</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -238,7 +238,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>160</y>
+      <y>170</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -257,7 +257,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>200</y>
+      <y>210</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -270,7 +270,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>200</y>
+      <y>210</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -289,7 +289,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>240</y>
+      <y>250</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -302,7 +302,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>240</y>
+      <y>250</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -321,7 +321,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>280</y>
+      <y>290</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -340,7 +340,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>280</y>
+      <y>290</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -353,7 +353,7 @@
     <property name="geometry">
      <rect>
       <x>440</x>
-      <y>160</y>
+      <y>170</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -366,7 +366,7 @@
     <property name="geometry">
      <rect>
       <x>440</x>
-      <y>240</y>
+      <y>250</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -382,7 +382,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>360</y>
+      <y>370</y>
       <width>41</width>
       <height>24</height>
      </rect>
@@ -404,7 +404,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>360</y>
+      <y>370</y>
       <width>41</width>
       <height>24</height>
      </rect>
@@ -426,7 +426,7 @@
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>360</y>
+      <y>370</y>
       <width>41</width>
       <height>24</height>
      </rect>
@@ -448,7 +448,7 @@
     <property name="geometry">
      <rect>
       <x>320</x>
-      <y>360</y>
+      <y>370</y>
       <width>41</width>
       <height>24</height>
      </rect>
@@ -467,7 +467,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>360</y>
+      <y>370</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -480,7 +480,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>410</y>
+      <y>420</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -496,7 +496,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>410</y>
+      <y>420</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -521,7 +521,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>320</y>
+      <y>330</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -534,7 +534,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>320</y>
+      <y>330</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -547,7 +547,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>320</y>
+      <y>330</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -569,7 +569,7 @@
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>360</y>
+      <y>370</y>
       <width>41</width>
       <height>24</height>
      </rect>
@@ -588,7 +588,7 @@
     <property name="geometry">
      <rect>
       <x>460</x>
-      <y>360</y>
+      <y>370</y>
       <width>92</width>
       <height>24</height>
      </rect>
@@ -601,7 +601,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>410</y>
+      <y>420</y>
       <width>92</width>
       <height>24</height>
      </rect>
@@ -614,7 +614,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>450</y>
+      <y>460</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -623,11 +623,11 @@
      <string>Potentiometer Analog In</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkPollAnalog4">
+   <widget class="QCheckBox" name="checkPollAnalog5">
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>450</y>
+      <y>460</y>
       <width>92</width>
       <height>24</height>
      </rect>
@@ -636,14 +636,14 @@
      <string>Poll</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spinAnalogIn4">
+   <widget class="QSpinBox" name="spinAnalogIn5">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>450</y>
+      <y>460</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -662,6 +662,38 @@
     </property>
     <property name="value">
      <number>500</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>50</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SW Version</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineSwVers">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>50</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
    </widget>
   </widget>
