--- a/Maintenance/src/MaintenanceGui.ui
+++ b/Maintenance/src/MaintenanceGui.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>630</width>
-    <height>546</height>
+    <height>581</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -186,7 +186,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>500</y>
+      <y>510</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -199,7 +199,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>500</y>
+      <y>510</y>
       <width>75</width>
       <height>21</height>
      </rect>
@@ -212,7 +212,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>500</y>
+      <y>510</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -349,30 +349,17 @@
      <string>Button 4</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnReadButton1">
+   <widget class="QPushButton" name="btnReadButtons">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>170</y>
+      <x>340</x>
+      <y>330</y>
       <width>91</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Read 1,2</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btnReadButton3">
-    <property name="geometry">
-     <rect>
-      <x>440</x>
-      <y>250</y>
-      <width>91</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Read 3,4,5</string>
+     <string>Read</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="checkButton1">
@@ -480,7 +467,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>420</y>
+      <y>430</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -496,7 +483,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>420</y>
+      <y>430</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -533,14 +520,14 @@
    <widget class="QPushButton" name="btnWriteButtons">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>450</x>
       <y>330</y>
       <width>81</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Write All</string>
+     <string>Write</string>
     </property>
    </widget>
    <widget class="QSpinBox" name="spinButton5">
@@ -601,7 +588,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>420</y>
+      <y>430</y>
       <width>92</width>
       <height>24</height>
      </rect>
@@ -614,7 +601,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>460</y>
+      <y>470</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -627,7 +614,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>460</y>
+      <y>470</y>
       <width>92</width>
       <height>24</height>
      </rect>
@@ -643,7 +630,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>460</y>
+      <y>470</y>
       <width>101</width>
       <height>24</height>
      </rect>
@@ -694,6 +681,116 @@
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkButton2_tx">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>400</y>
+      <width>41</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>2</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkButton5_tx">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>400</y>
+      <width>41</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>5</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkButton3_tx">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>400</y>
+      <width>41</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>3</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkButton4_tx">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>400</y>
+      <width>41</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>4</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkButton1_tx">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>400</y>
+      <width>41</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>1</string>
     </property>
    </widget>
   </widget>
